2014-06-12  ------ inet-2.4.0 released ------

2014-03-19  ------ inet-2.3.0 released ------

2013-08-22  ------ inet-2.2.0 released ------

2013-04-14  Andras Varga

	queues: added pop() to IPassiveQueue

	Useful for flushing queues in MACs when they go down. clear() is not
	good enough because we want to use packets as drop signal value.

2013-01-30  ------ inet-2.1.0 released ------

2012-08-07  ------ inet-2.0.0 released ------

2012-06-25  ------ inet-1.99.5 released ------

2012-05-16  Tamas Borbely

	Old queuing components has been removed:
	 - DropTailQosQueue
	 - REDQueue
	 - WeightedFairQueue
	 - IQoSClassifier (moved to linklayer/ieee80211/mac)
	 - BasicDSCPClassifier
	Some of them can be substituted by compound modules composed
	of these newly added components:
	 - FIFOQueue
	 - REDDropper
	 - ThresholdDropper
	 - PriorityScheduler
	 - WRRScheduler
	For example REDQueue is a combination of a REDDropper and a FIFOQueue,
	and DropTailQosQueue is a combination of some classifier, DropTailQueues,
	and a PriorityScheduler.

2012-04-26  Tamas Borbely

	DropTailQueue: name of the inner queue can be specified by
	a parameter. This is useful when a compound module contains
	multiple queues, and you want to specify one of them in
	the 'q' tag of the display string.

2012-03-20  ------ inet-1.99.4 released ------

2012-02-24  ------ inet-1.99.3 released ------

2012-02-10  Andras Varga

	added WeigthedFairQueue from INETMANET (following some formatting and
	C++ improvements)

2011-12-22  Andras Varga

	statistics revised:

	- added dropPk and queueingTime
	- changed statistics titles to lowercase
	- add "max" recording mode to places where "timeavg" was present and
	  it is appropriate
	- fix: interpolationmode should be used with @statistic and not with
	  @signal
	- remove "histogram" recording from queue length statistics (makes
	  no sense), added "timeavg" instead
	- removed "stats" where "histogram" was already present (as it implies
	  "stats")
